--- a/Frontpage/SESO_Frontpage.html
+++ b/Frontpage/SESO_Frontpage.html
@@ -1,15 +1,22 @@
-<!Doctype HTML>
+<!DOCTYPE html>
+<!--Designed by Sebastian Marshall in Atherton, California-->
 <html>
 <head>
-
-
-
-
-
+<!--Lato Light-->
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700'
+	rel='stylesheet' type='text/css'>
+<!--Linking CSS and JS Pages-->
+    <link rel =  'stylesheet' href = 'SESO_Frontpage.css'>
+    <link rel="stylesheet" type="text/css" href="SESO_Frontpage.js" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="vendors/jquery.easings.min.js"></script>
+    <script type="text/javascript" src="SESO_Frontpage.js"></script>
+<!--Title-->
+    <title> SESO </title>
 </head>
 <body>
 <!--GlobalNavBar-->
-    <div id  = "Globalnav">
+    <div id  = "GlobalNav">
         <ul>
             <li><a href = "SESO_Frontpage.html"> Home </a></li>
             <li><a href = "SESO_Sports.html"> Sports </a></li>
@@ -20,33 +27,17 @@
         </ul>
     </div>
 <!--Main Image-->
-    <div id = ""
+    <div id = "FrontSlideshow">
+        <div id = "FrontSlideshow_Title">SESO</div>
+        <div id="SubMainText">A School E-Sports Organization</div>
+        <div id="LearnMoreLink">
+            <a href = "ESports.html">Learn More></a>
+        </div>
+	</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--GlobalFooter-->
+    <footer id = "GlobalFooter">
+        Marshall Enterprises 2016©
+    </footer>
 </body>
+</html>
