Like all different

--- a/Frontpage/SESO_Frontpage.html
+++ b/Frontpage/SESO_Frontpage.html
@@ -37,7 +37,7 @@
 
 <!--GlobalFooter-->
     <footer id = "GlobalFooter">
-        Marshall Enterprises 2016©
+        Marshall Enterprises 2016
     </footer>
 </body>
 </html>
