--- a/Frontpage/SESO_Frontpage.html
+++ b/Frontpage/SESO_Frontpage.html
@@ -19,7 +19,7 @@
     <div id  = "GlobalNav">
         <ul>
             <li><a href = "SESO_Frontpage.html"> Home </a></li>
-            <li><a href = "SESO_Sports.html"> Sports </a></li>
+            <li><a href = "SESO_Sports.html"> E-Sports </a></li>
             <li><a href = "SESO_Streams.html"> Streams </a></li>
             <li><a href = "SESO_News.html"> News </a></li>
             <li><a href = "SESO_Login.html"> Login </a></li>
@@ -27,14 +27,14 @@
         </ul>
     </div>
 <!--Main Image-->
+<div
     <div id = "FrontSlideshow">
         <div id = "FrontSlideshow_Title">SESO</div>
         <div id="SubMainText">A School E-Sports Organization</div>
         <div id="LearnMoreLink">
-            <a href = "ESports.html">Learn More></a>
+            <a href = "SESO_Sports.html">Learn More></a>
         </div>
 	</div>
-
 <!--GlobalFooter-->
     <footer id = "GlobalFooter">
         Marshall Enterprises 2016
