--- a/E-Sports/SESO_Esports.html
+++ b/E-Sports/SESO_Esports.html
@@ -4,15 +4,15 @@
 <head>
 <!--Lato Light-->
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700'
-	rel='stylesheet' type='text/css'>
+    rel='stylesheet' type='text/css'>
 <!--Linking CSS and JS Pages-->
-    <link rel =  'stylesheet' href = 'SESO_Frontpage.css'>
-    <link rel="stylesheet" type="text/css" href="SESO_Frontpage.js" />
+    <link rel = 'stylesheet' href = 'SESO_Esports.css'>
+    <link rel = "stylesheet" type = "text/css" href = "SESO_Esports.js"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="vendors/jquery.easings.min.js"></script>
-    <script type="text/javascript" src="SESO_Frontpage.js"></script>
+    <script type="text/javascript" src="SESO_Esports.js"></script>
 <!--Title-->
-    <title> SESO </title>
+    <title> E-Sports </title>
 </head>
 <body>
 <!--GlobalNavBar-->
@@ -26,18 +26,23 @@
             <li><a href = "SESO_Leaderboard"> Leaderboard </a></li>
         </ul>
     </div>
-<!--Main Image-->
-<div>
-    <div id = "FrontSlideshow">
-        <div id = "FrontSlideshow_Title">SESO</div>
-        <div id="SubMainText">A School E-Sports Organization</div>
-        <div id="LearnMoreLink">
-            <a href = "SESO_Sports.html">Learn More></a>
-        </div>
-	</div>
-<!--GlobalFooter-->
-    <footer id = "GlobalFooter">
-        Marshall Enterprises 2016
-    </footer>
-</body>
+<!--CSGOnav-->
+    <div id = "NavCSGO">
+        <ul>
+            <li><a href = "SESO_CSGO.html">Information</a></li>
+            <li><a href = "SESO_LoL.html">Design</a></li>
+            <li><a href = "E-Sports-CSGO-register.html">Register</a></li>
+        </ul>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
 </html>
